--- a/docs/faq/向电视投屏播放视频和弹幕.md
+++ b/docs/faq/向电视投屏播放视频和弹幕.md
@@ -1,59 +1,47 @@
-<h1>向电视投屏播放视频和弹幕</h1>
+# 向电视投屏播放视频和弹幕
 
-<p>通过“弹弹play安卓概念版”应用，您可以向安装了安卓概念版的大屏设备（如电视、平板）远程无线投屏视频，并播放弹幕。支持通过手机端或电脑端发起投屏请求。</p>
+通过“弹弹play安卓概念版”应用，您可以向安装了安卓概念版的大屏设备（如电视、平板）远程无线投屏视频，并播放弹幕。支持通过手机端或电脑端发起投屏请求。
 
-<p> </p>
+## 操作方法
 
-<h1>操作方法</h1>
+（以下以电视设备为例，方法适用于所有可以安装安卓概念版的设备）
 
-<p>（以下以电视设备为例，方法适用于所有可以安装安卓概念版的设备）</p>
+### 一、首先请在电视上安装弹弹play安卓概念版，通常的安装方式如下：
 
-<p> </p>
+1. 浏览器访问弹弹play官网 www.dandanplay.com，点击安卓概念版链接，跳转到产品下载页进行下载
 
-<h2>一、首先请在电视上安装弹弹play安卓概念版，通常的安装方式如下：</h2>
+   ![20c7bdfd607e8376f6f7d5745f029e83.png](https://txc.gtimg.com/data/104929/2023/0320/20c7bdfd607e8376f6f7d5745f029e83.png)
 
-<p>1. 浏览器访问弹弹play官网 www.dandanplay.com，点击安卓概念版链接，跳转到产品下载页进行下载</p>
+   ![ec69d9bc700605abeb363b71711ebe27.png](https://txc.gtimg.com/data/104929/2023/0320/ec69d9bc700605abeb363b71711ebe27.png)
 
-<p style="text-align:center;"><img height="244" src="https://txc.gtimg.com/data/104929/2023/0320/20c7bdfd607e8376f6f7d5745f029e83.png" width="500" alt="20c7bdfd607e8376f6f7d5745f029e83.png" /></p>
+2. 要在电视上安装，可以先在电脑上将弹弹play安卓概念版apk下载到一个U盘中，然后把U盘插到电视上。最后通过电视上的“文件管理器”应用找到U盘中的apk文件，打开并安装。
 
-<p style="text-align:center;"><img height="309" src="https://txc.gtimg.com/data/104929/2023/0320/ec69d9bc700605abeb363b71711ebe27.png" width="500" alt="ec69d9bc700605abeb363b71711ebe27.png" /></p>
+3. 部分电视的“文件管理器”应用还支持远程wifi传文件，也可以选用这种方式将apk传到电视上，然后进行安装。
 
-<p>2. 要在电视上安装，可以先在电脑上将弹弹play安卓概念版apk下载到一个U盘中，然后把U盘插到电视上。最后通过电视上的“文件管理器”应用找到U盘中的apk文件，打开并安装。</p>
+### 二、首次配置：打开电视上的“投屏接收服务”
 
-<p>3. 部分电视的“文件管理器”应用还支持远程wifi传文件，也可以选用这种方式将apk传到电视上，然后进行安装。</p>
+如果部分界面中使用遥控器操作有困难，可以临时插一个USB鼠标来操作。配置完成后就不再需要了。
 
-<p> </p>
+在电视上打开“弹弹play安卓概念版”，点击下方“我的”-“投屏接收端”
 
-<h2>二、首次配置：打开电视上的“投屏接收服务”</h2>
+![2e7e439ebf162d299a73f76ef69e2172.jpeg](https://txc.gtimg.com/data/104929/2023/0320/2e7e439ebf162d299a73f76ef69e2172.jpeg)
 
-<p>如果部分界面中使用遥控器操作有困难，可以临时插一个USB鼠标来操作。配置完成后就不再需要了。</p>
+之后启动投屏接收服务即可。建议取消下方的”接收时弹窗确认“，并启用”自动启用接受服务“。
 
-<p>在电视上打开“弹弹play安卓概念版”，点击下方“我的”-“投屏接收端”</p>
+![75e63ccd1c6483df15fc9eb01f1f3512.jpeg](https://txc.gtimg.com/data/104929/2023/0320/75e63ccd1c6483df15fc9eb01f1f3512.jpeg)
 
-<p style="text-align:center;"><img height="532" src="https://txc.gtimg.com/data/104929/2023/0320/2e7e439ebf162d299a73f76ef69e2172.jpeg" width="800" alt="2e7e439ebf162d299a73f76ef69e2172.jpeg" /></p>
+### 三、使用手机端投屏播放（略）
 
-<p>之后启动投屏接收服务即可。建议取消下方的”接收时弹窗确认“，并启用”自动启用接受服务“。</p>
+在手机端，可以通过各个界面菜单中的“投屏”命令开始投屏，此处不再赘述。
 
-<p style="text-align:center;"><img height="649" src="https://txc.gtimg.com/data/104929/2023/0320/75e63ccd1c6483df15fc9eb01f1f3512.jpeg" width="800" alt="75e63ccd1c6483df15fc9eb01f1f3512.jpeg" /></p>
+### 四、使用PC端投屏播放
 
-<p> </p>
+从弹弹play Windows/UWP 13.2版本开始，支持将电脑中的文件和弹幕投屏到电视上进行播放。
 
-<h2>三、使用手机端投屏播放（略）</h2>
+在视频播放过程中右键打开菜单，选择“投屏”；或是在媒体库中右键点击视频选择“投屏播放”，都可以启动投屏：
 
-<p>在手机端，可以通过各个界面菜单中的“投屏”命令开始投屏，此处不再赘述。</p>
+![b6487617b1564b4327dbc7430a2a748b.png](https://txc.gtimg.com/data/104929/2023/0320/b6487617b1564b4327dbc7430a2a748b.png)
 
-<p> </p>
+在「投屏」窗口中，切换到”安卓概念版投屏“页，输入电视上正在显示的IP地址、端口号以及连接密码（可选），点击”开始投屏“按钮即可。在投屏播放的过程中，可以关闭这个窗口，但不能退出弹弹play播放器。
 
-<h2>四、使用PC端投屏播放</h2>
-
-<p>从弹弹play Windows/UWP 13.2版本开始，支持将电脑中的文件和弹幕投屏到电视上进行播放。</p>
-
-<p>在视频播放过程中右键打开菜单，选择“投屏”；或是在媒体库中右键点击视频选择“投屏播放”，都可以启动投屏：</p>
-
-<p style="text-align:center;"><img height="467" src="https://txc.gtimg.com/data/104929/2023/0320/b6487617b1564b4327dbc7430a2a748b.png" width="700" alt="b6487617b1564b4327dbc7430a2a748b.png" /></p>
-
-<p> </p>
-
-<p>在「投屏」窗口中，切换到”安卓概念版投屏“页，输入电视上正在显示的IP地址、端口号以及连接密码（可选），点击”开始投屏“按钮即可。在投屏播放的过程中，可以关闭这个窗口，但不能退出弹弹play播放器。</p>
-
-<p style="text-align:center;"><img height="451" src="https://txc.gtimg.com/data/104929/2023/0320/4ca8f59daea7d48ff05f8dcac6878762.png" width="563" alt="4ca8f59daea7d48ff05f8dcac6878762.png" /></p>
+![4ca8f59daea7d48ff05f8dcac6878762.png](https://txc.gtimg.com/data/104929/2023/0320/4ca8f59daea7d48ff05f8dcac6878762.png)
