--- a/docs/faq/使用备用弹幕功能优化弹幕加载体验.md
+++ b/docs/faq/使用备用弹幕功能优化弹幕加载体验.md
@@ -12,7 +12,7 @@
 
 **位置**
 
-“备用弹幕”功能是 [弹弹play会员](https://support.qq.com/products/104929/faqs/135983) 专属功能。开关位于【设置-弹幕插件】页，默认为关闭，需要手动勾选开启。
+“备用弹幕”功能是 [弹弹play会员](关于弹弹play会员.html) 专属功能。开关位于【设置-弹幕插件】页，默认为关闭，需要手动勾选开启。
 
 ![a908146b08be248169fa53dd2ba13e50.png](https://txc.gtimg.com/data/104929/2023/1014/a908146b08be248169fa53dd2ba13e50.png)
 
