--- a/docs/faq/『弹幕外挂』功能配置方法.md
+++ b/docs/faq/『弹幕外挂』功能配置方法.md
@@ -1,5 +1,7 @@
 # 『弹幕外挂』功能配置方法
 
+[[toc]]
+
 弹弹play PC版从 14.0 版本开始新增『弹幕外挂』功能，可以让您在使用熟悉的播放器播放视频时（如 PotPlayer、mpv、MPC-HC、MPC-BE 等），在其画面上方覆盖来自弹弹play的弹幕渲染层，并根据播放进度实时播放弹幕。
 
 使用 PotPlayer 播放时的效果如下：
